# terminion

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
ai_shell/: __init__.py  assistant.py  config.py  main.py  utils.py  visuals.py
ai_shell.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
